# Wrap3Dll

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/: README.md
.github/workflows/: msbuild.yml
Wrap3Dll/src/: Memory.cpp  Memory.hpp  WrapMain.cpp  dllmain.cpp
